@@ -4,7 +4,6 @@ compatibility with gcc 4.5, or rather relies on changes to the c language
 that isn't present in the 4.5 branch yet.  An asterisk means it can be
 incorporated into the current trunk.
 
-baldrick: 158258:  gccint/two + except (remove)
 ebotczou: 158255:  gccint/four + testsuite
 ebotczou: 158254:  gccint/six + gimple + tree-ssa-ccp 
 ro:       158236:* config.gcc
