@@ -1,3 +1,8 @@
+2010-04-13  Duncan Sands  <baldrick@free.fr>
+
+	* gcc-interface/misc.c (gnat_eh_type_covers): Remove.
+	* gcc-interface/trans.c (Exception_Handler_to_gnu_zcx): Update comment.
+
 2010-04-07  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* exp_pakd.adb (Create_Packed_Array_Type): Always use a modular type
